--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
   /*text-align: center;*/
 }
+
+#navBar {
+  color: white;
+  padding: 10px 0px;
+  width: 100%;
+  height: 15%;
+  border-bottom: 2px solid black;
+}
