--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   /*text-align: center;*/
 }
 
+#bookish {
+  font-family: 'Prata', serif;
+  text-align: center;
+  position: absolute;
+  color: black;
+  font-size: 1.7em;
+  letter-spacing: 4px;
+}
+
 #navBar {
   color: white;
   padding: 10px 0px;
