--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,19 @@
   height: 15%;
   border-bottom: 2px solid black;
 }
+
+#subhead {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 2px;
+  font-size: 1em;
+  text-align: center;
+}
+
+#home {
+  background-image: url("./images/book1.jpg");
+  background-repeat: no-repeat;
+  /*background-size: cover;*/
+  background-position: center;
+  width: 100%;
+  height: 80%;
+}
